--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "findup": "0.1.5",
     "fs-extra": "0.12.0",
     "git-repo-info": "^1.0.2",
-    "glob": "^4.0.5",
+    "glob": "4.0.5",
     "inflection": "^1.4.0",
     "inquirer": "0.5.1",
     "js-string-escape": "^1.0.0",
